--- a/public/index.html
+++ b/public/index.html
@@ -9,23 +9,23 @@
 
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Купить VPN | VPNlove.me | Список лучших VPN-сервисов</title>
+  <title>Рейтинг VPN-сервисов | VPN Love</title>
   <meta property="og:url" content="https://vpnlove.me" />
   <meta property="og:title" content="Купить VPN | VPNlove.me" />
-  <meta property="og:description" content="Маркетплейс честных провайдеров VPN-услуг от проекта РосКомСвобода" />
+  <meta property="og:description" content="Рейтинг провайдеров VPN-услуг от проекта РосКомСвобода" />
   <meta property="og:type" content="website" />
   <meta name="twitter:image" content="%PUBLIC_URL%/share.png" />
   <meta property="fb:app_id" content="257953674358265" />
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@rublacklistnet" />
   <meta name="twitter:title" content="VPNlove.me" />
-  <meta name="twitter:description" content="Маркетплейс честных провайдеров VPN-услуг" />
+  <meta name="twitter:description" content="Рейтинг провайдеров VPN-услуг" />
   <meta name="twitter:image" content="%PUBLIC_URL%/share.png" />
   <meta name="format-detection" content="telephone=no" />
   <meta http-equiv="x-dns-prefetch-control" content="on">
 
-  <meta name="description" content="Все VPN, рекомендуемые на этом сайте, являются надёжными и проверенными сервисами, которыми успешно пользуются сотни тысяч людей" />
-  <meta name="keywords" content="VPN, ВПН, купить VPN, купить впн, скачать VPN, список vpn, провайдеры vpn, что такое vpn, как выбрать vpn" />
+  <meta name="description" content="Все VPN разобраны нашими специалистами и мы рекомендуем лишь те, которые отвечают стандартам приватности и безопасности." />
+  <meta name="keywords" content="VPN, ВПН, купить VPN, купить впн, скачать VPN, список vpn, провайдеры vpn, что такое vpn, как выбрать vpn, рейтинг vpn" />
   <link rel="canonical" href="https://vpnlove.me">
 
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
